--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <title>Document</title>
   </head>
   <body>
-    <!-- Begin Mailchimp Signup Form -->
+    <button onclick="playVid()" type="button">Play Video</button>
+    <button onclick="pauseVid()" type="button">Pause Video</button><br />
+    <video id="myVideo" width="320" height="176">
+      <source src="./Crisp-Home-Care-1080p-221024.mp4" type="video/mp4" />
+      Your browser does not support HTML5 video.
+    </video>
   </body>
+  <script>
+    var vid = document.getElementById("myVideo");
+
+    function playVid() {
+      vid.play();
+      vid.style.display = "block";
+    }
+
+    function pauseVid() {
+      vid.pause();
+      vid.style.display = "none";
+    }
+  </script>
 </html>
